smile file api 0.0.1
