# openapi.yaml
@@ -31,6 +31,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Patient'
+        "400":
+          description: Ошибка запроса
+        "500":
+          description: Внутренняя ошибка сервера
   /patients/{patientId}:
     get:
       summary: Получить конкретного пациента
@@ -39,7 +43,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
       responses:
         "200":
           description: Информация о пациенте
@@ -47,14 +51,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Patient'
+        "404":
+          description: Пациент не найден
+        "500":
+          description: Внутренняя ошибка сервера
     put:
-      summary: Обновить информацию о пациенте
+      summary: Обновить информацию о пациенте (список visits обновляется отдельно. Здесь можно оставить пустым)
       parameters:
         - name: patientId
+          description: Пользователя находим именно по этому id. Id в body не используется.
           in: path
           required: true
           schema:
-            type: string
+            type: integer
       requestBody:
         required: true
         content:
@@ -68,7 +77,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Patient'
+        "400":
+          description: Ошибка запроса
+        "404":
+          description: Пациент не найден
+        "500":
+          description: Внутренняя ошибка сервера
   /visits:
+    get:
+      summary: Получить список посещений
+      responses:
+        "200":
+          description: Список посещений
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Visit'
+        "500":
+          description: Внутренняя ошибка сервера
     post:
       summary: Создать новое посещение
       requestBody:
@@ -84,7 +112,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Visit'
+        "400":
+          description: Ошибка запроса
+        "500":
+          description: Внутренняя ошибка сервера
   /visits/{visitId}:
+    get:
+      summary: Получить информацию о конкретном посещении
+      parameters:
+        - name: visitId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Информация о посещении
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Visit'
+        "404":
+          description: Посещение не найдено
+        "500":
+          description: Внутренняя ошибка сервера
     put:
       summary: Обновить информацию о посещении
       parameters:
@@ -92,7 +143,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
       requestBody:
         required: true
         content:
@@ -106,13 +157,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Visit'
+        "400":
+          description: Ошибка запроса
+        "404":
+          description: Посещение не найдено
+        "500":
+          description: Внутренняя ошибка сервера
 components:
   schemas:
     Patient:
       type: object
       properties:
         id:
-          type: string
+          type: integer
           title: id
         name:
           type: string
@@ -132,18 +189,18 @@ components:
             $ref: '#/components/schemas/Visit'
           title: visits
       example:
-        id: id
+        id: 1
         name: name
         contactDetails: contactDetails
         lastAppointment: "2000-01-23T04:56:07.000+00:00"
         visits:
-          - id: visitId1
-            patientId: patientId1
+          - id: 1
+            patientId: 1
             date: "2000-01-23T04:56:07.000+00:00"
             treatment: treatment
             diagnosis: diagnosis
-          - id: visitId2
-            patientId: patientId1
+          - id: 2
+            patientId: 1
             date: "2000-01-23T04:56:07.000+00:00"
             treatment: treatment
             diagnosis: diagnosis
@@ -151,10 +208,10 @@ components:
       type: object
       properties:
         id:
-          type: string
+          type: integer
           title: id
         patientId:
-          type: string
+          type: integer
           title: patientId
         date:
           type: string
@@ -170,8 +227,8 @@ components:
           description: Лечение
           title: treatment
       example:
-        id: visitId1
-        patientId: patientId1
+        id: 1
+        patientId: 1
         date: "2000-01-23T04:56:07.000+00:00"
         treatment: treatment
         diagnosis: diagnosis
@@ -198,7 +255,7 @@ components:
       type: object
       properties:
         patientId:
-          type: string
+          type: integer
           title: patientId
         date:
           type: string
@@ -214,7 +271,7 @@ components:
           description: Лечение
           title: treatment
       example:
-        patientId: patientId1
+        patientId: 1
         date: "2000-01-23T04:56:07.000+00:00"
         treatment: treatment
         diagnosis: diagnosis
